created heading sectio

--- a/index.html
+++ b/index.html
@@ -10,7 +10,27 @@
     <title>Hero First Assignment</title>
     <link rel="stylesheet" href="style.css">
 </head> 
-<body>
-    
+<body class="font-open-sans">
+    <header>
+        <nav>
+                <div class="logo">
+                <img src="assets/logo-navbar.png" alt="logo">
+                </div>
+                <ul class="menu">
+                    <li>Features</li>
+                    <li>How It Works</li>
+                    <li>Why It's Different</li>
+                </ul>
+                <button class="btn"><a href="">Get Early Access</a></button>
+        </nav>
+        <div class="banner-section">
+            <button class="btn-2"><a href=""><div class="circle"></div> Early Access Now Open</a></button>
+            <h1 class="text1">Structured Thinking,</h1>
+            <h1 class="text2">Not Just Note-Taking.</h1>
+            <p>A private space to store notes, links, and learning summaries — designed to</p>
+            <p>help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+            <button class="btn-3"><a href="">Start Building Your Vault</a></button>
+            <button class="btn-4"><a href="">See How It Works</a></button>
+    </header>
 </body>
 </html>
