--- a/index.html
+++ b/index.html
@@ -32,5 +32,65 @@
             <button class="btn-3"><a href="">Start Building Your Vault</a></button>
             <button class="btn-4"><a href="">See How It Works</a></button>
     </header>
+    <section id="about">
+        <div class="about-container">
+            <div class="about-heading">
+                <h1>Notes Don't Fail, Structure Does.</h1>
+                <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+            </div>
+        </div>    
+            <div class="about-card">
+                <div class="card-information">
+                    <img src="assets/Vector.png" alt="">
+                    <h2>Scattered Notes</h2>
+                    <p>Your Ideas Live In 10 Different Apps, None Of Them Connected.</p>
+                </div>
+                <div class="card-information">
+                    <img src="assets/Bookmarks.png" alt="">
+                    <h2>Bookmark Overload</h2>
+                    <p>Hundreds Of Saved Links You'll Never Revisit Or Remember.</p>
+                </div>
+                <div class="card-information">
+                    <img src="assets/Brain.png" alt="">
+                    <h2>No Idea Connections</h2>
+                    <p>Insights Stay Isolated, Never Building Into Bigger Understanding.</p>
+                </div>
+                <div class="card-information">
+                    <img src="assets/Info.png" alt="">
+                    <h2>Forgetting What You Learned</h2>
+                    <p>Knowledge Fades Because There's No System To Retain Tt.</p>
+                </div>
+            </div>
+    </section>
+    <section id="knowledge">
+        <div class="knowledge-section">
+            <div class="image">
+                <img src="assets/knowledge.png" alt="">   
+            </div>
+            <div class="know-section">
+                <div class="know-heading">
+                    <h5>THE SOLUTION</h5>
+                    <h2>Your Second Brain,Structured By Design.</h2>
+                    <p>Personal Knowledge Vault isn't another note-taking app. z It's a thinking environment where every note, link, and summary becomes part of an interconnected web of understanding</p>
+                </div>
+                <div class="know">
+                    <img src="assets/CheckCircle.png" alt="">
+                    <p>Capture Ideas Wth Structure Built-in From Day One</p>
+                </div>
+                <div class="know">
+                    <img src="assets/CheckCircle.png" alt="">
+                    <p>Capture Ideas Wth Structure Built-in From Day One</p>
+                </div>
+                <div class="know">
+                    <img src="assets/CheckCircle.png" alt="">
+                    <p>Capture Ideas Wth Structure Built-in From Day One</p>
+                </div>
+                <div class="know">
+                    <img src="assets/CheckCircle.png" alt="">
+                    <p>Capture Ideas Wth Structure Built-in From Day One</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
