--- a/index.html
+++ b/index.html
@@ -24,13 +24,19 @@
                 <button class="btn"><a href="">Get Early Access</a></button>
         </nav>
         <div class="banner-section">
-            <button class="btn-2"><a href=""><div class="circle"></div> Early Access Now Open</a></button>
-            <h1 class="text1">Structured Thinking,</h1>
-            <h1 class="text2">Not Just Note-Taking.</h1>
-            <p>A private space to store notes, links, and learning summaries — designed to</p>
-            <p>help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
-            <button class="btn-3"><a href="">Start Building Your Vault</a></button>
-            <button class="btn-4"><a href="">See How It Works</a></button>
+            <button class="btn-2"><a href=""><span class="dot"></span> Early Access Now Open</a></button>
+                <h1 class="text1">Structured Thinking,</h1>
+                <h1 class="text2">Not Just Note-Taking.</h1>
+                <p>A private space to store notes, links, and learning summaries — designed to</p>
+                <p>help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+            <div class="banner-button">  
+            <button class="btn-3">
+              <span>Start Building Your Vault</span>
+             <img class="arrow" src="assets/ArrowRight.png" alt="" >
+            </button>
+            <button class="btn-4"><i id="play-icon" class="fas fa-play"></i><a href="">See How It Works</a></button>
+            </div>     
+            
     </header>
     <section id="about">
         <div class="about-container">
@@ -70,27 +76,66 @@
             <div class="know-section">
                 <div class="know-heading">
                     <h5>THE SOLUTION</h5>
-                    <h2>Your Second Brain,Structured By Design.</h2>
+                    <h2>Your Second Brain, Structured By Design.</h2>
                     <p>Personal Knowledge Vault isn't another note-taking app. z It's a thinking environment where every note, link, and summary becomes part of an interconnected web of understanding</p>
                 </div>
-                <div class="know">
-                    <img src="assets/CheckCircle.png" alt="">
-                    <p>Capture Ideas Wth Structure Built-in From Day One</p>
-                </div>
-                <div class="know">
-                    <img src="assets/CheckCircle.png" alt="">
-                    <p>Capture Ideas Wth Structure Built-in From Day One</p>
-                </div>
-                <div class="know">
-                    <img src="assets/CheckCircle.png" alt="">
-                    <p>Capture Ideas Wth Structure Built-in From Day One</p>
-                </div>
-                <div class="know">
-                    <img src="assets/CheckCircle.png" alt="">
-                    <p>Capture Ideas Wth Structure Built-in From Day One</p>
+                <div class="first-know">
+                    <div class="know">
+                        <img src="assets/CheckCircle.png" alt="">
+                        <p>Capture Ideas Wth Structure Built-in From Day One</p>
+                    </div>
+                    <div class="know">
+                        <img src="assets/CheckCircle.png" alt="">
+                        <p>Capture Ideas Wth Structure Built-in From Day One</p>
+                    </div>
+                    <div class="know">
+                        <img src="assets/CheckCircle.png" alt="">
+                        <p>Capture Ideas Wth Structure Built-in From Day One</p>
+                    </div>
+                    <div class="know">
+                        <img src="assets/CheckCircle.png" alt="">
+                        <p>Capture Ideas Wth Structure Built-in From Day One</p>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+    <section id="early-access">
+        <div class="early-heading">
+            <h1>Ready To Think More Clearly?</h1>
+            <p>Join thousands of learners who are building their personal knowledge vaults
+            </p>
+            <p>Start free, no credit card required.</p>
+        </div>
+        <div class="early-bottom">
+            <div class="early-bottom1">
+                <button class="btn-5">
+                     <span>Get Early Access</span>
+                    <img class="arrow" src="assets/ArrowRight.png" alt="" >
+                </button>
+            </div>
+            
+              <p>Free during early access • No credit card needed</p>
+        </div>
+    </section>
+    <footer>
+        <div class="section-footer">
+           <div class="footer-body"> 
+                <div class="footer-image">
+                        <img src="assets/logo-footer.png" alt="">
+                </div>        
+                <div class="footer-social">
+                   <h3>Social Links</h3>
+                   <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+                   <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                   <a href=""><i class="fa-brands fa-facebook"></i></a>
+                </div>        
+            </div>
+            <div class="footer-bottom">
+                <hr>
+                <p> &copy; 2026 Personal Knowledge Vault. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
